; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/blacklist/port/extr_pidfile.c_generate_varrun_path.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/blacklist/port/extr_pidfile.c_generate_varrun_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"%s%s.pid\00", align 1
@_PATH_VARRUN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @generate_varrun_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @generate_varrun_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i8* (...) @getprogname()
  store i8* %8, i8** %3, align 8
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i32, i32* @_PATH_VARRUN, align 4
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @asprintf(i8** %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %10, i8* %11)
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i8* null, i8** %2, align 8
  br label %17

15:                                               ; preds = %9
  %16 = load i8*, i8** %4, align 8
  store i8* %16, i8** %2, align 8
  br label %17

17:                                               ; preds = %15, %14
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i8* @getprogname(...) #1

declare dso_local i32 @asprintf(i8**, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
